removed bin to lfs

--- a/notebooks/create-experiment-object.ipynb
+++ b/notebooks/create-experiment-object.ipynb
@@ -1163,6 +1163,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-18T20:36:29.658240Z",
+     "start_time": "2020-10-18T20:36:29.626394Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 19713., 497095., 706411., 969181.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recording['audio_events']['timestamp_begin'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
